Enable JavaFX native access
Java 25 warns when JavaFX loads its native windowing library.

Grant native access only to javafx.graphics for Gradle launches and
document the matching option for IntelliJ and executable JAR runs. This
keeps startup warning-free and prepares for stricter future JDKs.